fixed overlap

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,1 +1,2 @@
 $desktop-breakpoint:45rem;
+$base-font:'Work Sans', sans-serif;
